Added backend with registration and admin panel
